# Neural-Racer

./: .gitignore  Readme.md  device_driver.hpp  engine.hpp  implement.md  main.hpp  output_race.txt  structure.md  system_info.hpp  track.hpp  vehicle.hpp
examples/: CMakeLists.txt  basic_race.cpp  hardware_monitor.cpp
include/neural_racer/ai/: driver.hpp  inference.hpp
include/neural_racer/hardware/: device_driver.hpp  system_info.hpp
include/neural_racer/physics/: engine.hpp  vehicle.hpp
include/neural_racer/simulation/: race.hpp  telemetry.hpp  track.hpp
include/neural_racer/utils/: logger.hpp  profiler.hpp
src/: main.cpp
src/ai/: driver.cpp  inference.cpp
src/physics/: engine.cpp  vehicle.cpp
src/simulation/: race.cpp  telemetry.cpp  track.cpp
src/utils/: logger.cpp  profiler.cpp
tests/: CMakeLists.txt  ai_tests.cpp  hardware_tests.cpp  physics_tests.cpp  simulation_tests.cpp
